k8s/fe-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fe-app
spec:
  containers:
    - name: fe-app
      image: vietaws/eks:v2
      ports:
        - containerPort: 3000
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
