k8s/student-app-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app-api
spec:
  selector:
    matchLabels:
      app: student-app-api
  replicas: 3  # Thêm replicas để load balancer có thể phân phối
  template:
    metadata:
      labels:
        app: student-app-api
    spec:
      containers:
        - name: student-app-api
          image: nnhao2003/student-app-api:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
