k8s/fe-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-app-service
spec:
  selector:
    app: fe-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
