k8s/student-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: student-app-client-service
                port:
                  number: 80
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: student-app-api
                port:
                  number: 8080
